More collision detection

--- a/breakout/breakout.html
+++ b/breakout/breakout.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 	<div id="main">
-		<div id="main.top" class="top">
-			<nav id="main.nav">
-				<a href="../index.html">Home</a> |
-				<a href="../content.html">Games</a> |
-				<a href="breakoutdesigner.html">Level Designer</a> |
-			</nav>
-		</div>
+		<header id="main.top" class="top">
+				<nav id="main.nav">
+					<a href="../index.html">Home</a> |
+					<a href="../content.html">Games</a> |
+					<a href="breakoutdesigner.html">Level Designer</a>
+				</nav>
+		</header>
 		<div id="main.left" class="left">
 		</div>
 		<div id="main.focus" class="center">
@@ -24,6 +24,12 @@
 			<input id="main.focus.upload" type="file">
 			<label id="main.focus.downloadlabel" class="uploadLabel" for="main.focus.upload">Upload Level</label>
 		</div>
+
+		<div id="main.right" class="right"></div>
+
+		<footer>
+			<div id="main.bottom" class="bottom"></div>
+		</footer>
 	</div>
 </body>
 </html>
