--- a/breakout/breakoutdesigner.html
+++ b/breakout/breakoutdesigner.html
@@ -10,16 +10,16 @@
 </head>
 <body>
 	<div id="main">
-		<div id="main.top" class="top">
+		<header id="main.top" class="top">
 			<nav id="main.nav">
 				<a href="../index.html">Home</a> |
 				<a href="../content.html">Games</a> |
-				<a href="breakout.html">Breakout</a> |
+				<a href="breakout.html">Breakout</a>
 			</nav>
 			<h1>Breakout Level Designer</h1>
 			Level name: <input id="main.top.name" type="text" value="level" size="10"></input>
 			<input id="main.top.button" type="button" value="Change Name"></input>
-		</div>
+		</header>
 		<div id="main.sidebarleft" class="leftColumn">
 			Show grid: <input id="main.sidebarleft.grid" type="checkbox"><br>
 			<!-- <fieldset>
@@ -68,7 +68,6 @@
 				</fieldset>
 			</form>
 		</div>
-		<div>
 	</div>
 </body>
 </html>
