Final collision revision, block removal

--- a/breakout/breakout.html
+++ b/breakout/breakout.html
@@ -28,7 +28,12 @@
 		<div id="main.right" class="right"></div>
 
 		<footer>
-			<div id="main.bottom" class="bottom"></div>
+			<div id="main.bottom" class="bottom">
+				<p>
+					Press - or + to slow down or speed up the game<br>
+					Press space to launch the ball or pause the game
+				</p>
+			</div>
 		</footer>
 	</div>
 </body>
