Added a few designer features

--- a/breakout/breakout.html
+++ b/breakout/breakout.html
@@ -23,16 +23,20 @@
 			<canvas id="main.focus.canvas" width=600 height=600></canvas><br>
 			<input id="main.focus.upload" type="file">
 			<label id="main.focus.downloadlabel" class="uploadLabel" for="main.focus.upload">Upload Level</label>
+			<div id="main.focus.score">
+				Score: 0
+			</div>
+
+			<p>
+				Press space to launch the ball or pause the game<br>
+				Press + to speed the game up or - to slow it down
+			</p>
 		</div>
 
 		<div id="main.right" class="right"></div>
 
 		<footer>
 			<div id="main.bottom" class="bottom">
-				<p>
-					Press - or + to slow down or speed up the game<br>
-					Press space to launch the ball or pause the game
-				</p>
 			</div>
 		</footer>
 	</div>
