Fixed upload for lvl designer

--- a/breakout/breakout.html
+++ b/breakout/breakout.html
@@ -27,6 +27,10 @@
 				Score: 0
 			</div>
 
+			<div id="main.focus.lives">
+				Lives: 3
+			</div>
+
 			<p>
 				Press space to launch the ball or pause the game<br>
 				Press + to speed the game up or - to slow it down
