--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
 	<title>JSLabs Index</title>
 	<link href="style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
 	<div id="main">
-		<div id="main.top" class="top">
-			<h1>JSLabs</h1>
-			<nav>
-				<a href="index.html">Home</a>
-				<a href="content.html">Games</a>
-			</nav>
-			<hr>
-		</div>
-
+		<header>
+			<div id="main.top" class="top">
+				<h1>JSLabs</h1>
+				<nav>
+					<a href="index.html">Home</a> |
+					<a href="content.html">Games</a>
+				</nav>
+				<hr>
+			</div>
+		</header>
 		<div id="main.left" class="left">
 		</div>
 
