--- a/content.html
+++ b/content.html
@@ -6,16 +6,19 @@
 	<meta name="description" content="Classic arcade games written in javascript for the web browser">
 	<title>JavaScript Games</title>
 </head>
+
 <body>
 	<div id="main">
-		<div id="main.top" class="top">
-			<h1>JSLabs</h1>
-			<nav>
-				<a href="index.html">Home</a>
-				<a href="content.html">Games</a>
-			</nav>
-			<hr>
-		</div>
+		<header>
+			<div id="main.top" class="top">
+				<h1>JSLabs</h1>
+				<nav>
+					<a href="index.html">Home</a> | 
+					<a href="content.html">Games</a>
+				</nav>
+				<hr>
+			</div>
+		</header>
 
 		<div id="main.left" class="left">
 		</div>
