Level upload feature added to game

--- a/breakout/breakout.html
+++ b/breakout/breakout.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Breakout</title>
 	<script src="breakout.js"></script>
-	<!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
+	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 	<meta name="keywords" content="breakout, browser, arcade, javascript">
 	<meta name="description" content="In browser Breakout styled arcade game written in Javascript">
 	<link href="../style.css" type="text/css" rel="stylesheet">
