Added reset button

--- a/breakout/breakout.html
+++ b/breakout/breakout.html
@@ -23,6 +23,7 @@
 			<canvas id="main.focus.canvas" width=600 height=600></canvas><br>
 			<input id="main.focus.upload" type="file">
 			<label id="main.focus.downloadlabel" class="uploadLabel" for="main.focus.upload">Upload Level</label>
+			<input id="main.focus.restart" type="button" value="Restart"></input>
 			<div id="main.focus.score">
 				Score: 0
 			</div>
