--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 				<h1>JSLabs</h1>
 				<nav>
 					<a href="index.html">Home</a> |
-					<a href="content.html">Games</a>
+					<a href="content.html">Games</a> |
+					<a href="rich.html">Rich Internet Applications</a>
 				</nav>
 				<hr>
 			</div>
